Update via script

--- a/Program/VPN/Config/paqet/config.server4.yaml
+++ b/Program/VPN/Config/paqet/config.server4.yaml
@@ -56,7 +56,7 @@ transport:
 
   # KCP protocol settings
   kcp:
-    mode: "fast"              # KCP mode: normal, fast, fast2, fast3, manual
+    mode: "fast2"              # KCP mode: normal, fast, fast2, fast3, manual
 
     # Manual mode parameters (only used when mode="manual")
     # nodelay: 1              # 0=disable, 1=enable
