Update via script

--- a/Program/VPN/Config/paqet/config.server4.yaml
+++ b/Program/VPN/Config/paqet/config.server4.yaml
@@ -49,14 +49,14 @@ server:
 # Transport protocol configuration
 transport:
   protocol: "kcp"  # Transport protocol (currently only "kcp" supported)
-  conn: 32          # Number of connections (1-256, default: 1)
+  conn: 16          # Number of connections (1-256, default: 1)
   
   # tcpbuf: 8192   # TCP buffer size in bytes
   # udpbuf: 4096   # UDP buffer size in bytes
 
   # KCP protocol settings
   kcp:
-    mode: "fast2"              # KCP mode: normal, fast, fast2, fast3, manual
+    mode: "fast"              # KCP mode: normal, fast, fast2, fast3, manual
 
     # Manual mode parameters (only used when mode="manual")
     # nodelay: 1              # 0=disable, 1=enable
